#3 Working import of plugin packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,8 @@ pytest = "^7.4.4"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.plugins]
+[tool.poetry.plugins."umlars_translator.core.deserialization.abstract.base.deserialization_strategy"]
+ea_xmi = "umlars_translator.core.deserialization.formats.ea_xmi.deserialization_strategy"
