#3 Internal migration to using only DataBatch class. Added previously gitignored uml model builder. Added constants for EnterpriseArchitect data

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@ notes
 .hypothesis
 test_tmp_*.xml
 
-src/umlars_translator/core/model
+src/umlars_translator/core/model/*/
 src/umlars_translator/__trash
