#3 Extracted UmlModelBuilder interface.

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ notes
 test_tmp_*.xml
 umlars.log
 
-src/umlars_translator/core/model/*/
+src/umlars_translator/core/model/old_model
+src/umlars_translator/core/model/pyuml2
 src/umlars_translator/__trash
