--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ notes
 .hypothesis
 test_tmp_*.xml
 umlars.log
+venv
 
 src/umlars_translator/core/model/old_model
 src/umlars_translator/core/model/pyuml2
 src/umlars_translator/__trash
+
