--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = "^3.10"
 fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 kink = "^0.8.0"
+pydantic = "^2.7.4"
 
 
 [tool.poetry.group.dev.dependencies]
