--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 kink = "^0.8.0"
 pydantic = "^2.7.4"
+sqlalchemy = "^2.0.31"
 
 
 [tool.poetry.group.dev.dependencies]
