#5 Migrated from SqlAlchemy to MongoDb. Working locally - not in docker yet. Fixed issue with translationi in through cli.

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,16 @@
 
 # Logger
-LOG_LEVEL=WARNING 
+LOG_LEVEL=WARNING
+EXPOSE_ON_PORT=8020
+
+
+# MongoDB
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=root
+MONGO_INITDB_DATABASE=umlars_mongo
+MONGO_HOST=mongodb
+MONGO_PORT=27017
+
+
+# FastApi
+MONGO_DB_COLLECTION_NAME=UML_MODEL
