--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ src/umlars_translator/core/model/old_model
 src/umlars_translator/core/model/pyuml2
 src/umlars_translator/__trash
 
+mongo_data
+uml_model.db
