--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,18 @@ services:
     # TODO: Remove this volume mapping in production
     volumes:
       - .:/code
+    
+    depends_on:
+      - mongodb 
+
+  mongodb:
+    image: "mongo:latest"
+    env_file:
+      - ./.env.dev
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo_data:/data/db
+    
+volumes:
+  mongo_data:
