--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ uvicorn = {extras = ["standard"], version = "^0.30.1"}
 kink = "^0.8.0"
 pydantic = "^2.7.4"
 sqlalchemy = "^2.0.31"
+pika = "^1.3.2"
+pymongo = "^4.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
