--- a/.env.dev
+++ b/.env.dev
@@ -14,3 +14,8 @@ MONGO_PORT=27017
 
 # FastApi
 MONGO_DB_COLLECTION_NAME=UML_MODEL
+
+
+# RabbitMQ
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_DESERIALIZATION_QUEUE=deserialization_queue
