--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@ src/umlars_translator/core/model/old_model
 src/umlars_translator/core/model/pyuml2
 src/umlars_translator/__trash
 
+__trash
+
 mongo_data
 uml_model.db
