--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ kink = "^0.8.0"
 pydantic = "^2.7.4"
 pika = "^1.3.2"
 pymongo = "^4.7.3"
+watchfiles = "0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
