#5 Asynchronous communication working with rabbitmq.

--- a/.env.dev
+++ b/.env.dev
@@ -16,6 +16,10 @@ MONGO_PORT=27017
 MONGO_DB_COLLECTION_NAME=UML_MODEL
 
 
-# RabbitMQ
+# RABBITMQ
 RABBITMQ_HOST=rabbitmq
-RABBITMQ_DESERIALIZATION_QUEUE=deserialization_queue
+RABBITMQ_NODE_PORT=5672
+RABBITMQ_LOGS=message-broker.log
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=admin
+RABBITMQ_QUEUE_NAME=uploaded_files
