--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 kink = "^0.8.0"
 pydantic = "^2.7.4"
-pika = "^1.3.2"
-pymongo = "^4.7.3"
 watchfiles = "0.21.0"
+motor = "^3.5.1"
+aio-pika = "^9.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
