--- a/.env.dev
+++ b/.env.dev
@@ -23,3 +23,9 @@ RABBITMQ_LOGS=message-broker.log
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=admin
 RABBITMQ_QUEUE_NAME=uploaded_files
+
+
+# REPOSITORY SERVICE
+REPOSITORY_SERVICE_HOST=umlars-backend-backend-1
+REPOSITORY_SERVICE_PORT=8000
+REPOSITORY_SERVICE_MODELS_ENDPOINT=model-files
