#5 JWT authentication in repository service added

--- a/.env.dev
+++ b/.env.dev
@@ -28,4 +28,7 @@ RABBITMQ_QUEUE_NAME=uploaded_files
 # REPOSITORY SERVICE
 REPOSITORY_SERVICE_HOST=umlars-backend-backend-1
 REPOSITORY_SERVICE_PORT=8000
-REPOSITORY_SERVICE_MODELS_ENDPOINT=model-files
+REPOSITORY_SERVICE_MODELS_ENDPOINT="model-files"
+REPOSITORY_SERVICE_CREATE_JWT_ENDPOINT="auth/jwt/create"
+REPOSITORY_SERVICE_USER=admin
+REPOSITORY_SERVICE_PASSWORD=admin
