--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ venv
 src/umlars_translator/core/model/old_model
 src/umlars_translator/core/model/pyuml2
 src/umlars_translator/__trash
+.env*
 
 __trash
 
