--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ watchfiles = "0.21.0"
 motor = "^3.5.1"
 aio-pika = "^9.4.2"
 aiohttp = "^3.9.5"
+pytest-mock = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
