--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ motor = "^3.5.1"
 aio-pika = "^9.4.2"
 aiohttp = "^3.9.5"
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.24.0"
+pytest = "^8.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -40,7 +42,6 @@ mkdocstrings = { extras = ["python"], version = "^0.24.0" }
 mkdocs-material = "^9.5.3"
 tox = "^4.11.4"
 black = "^23.10.1"
-pytest = "^7.4.4"
 
 
 [build-system]
