--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,4 @@ build-backend = "poetry.core.masonry.api"
 ea_xmi = "src.umlars_translator.core.deserialization.formats.ea_xmi.ea_xmi_deserialization_strategy"
 papyrus_xmi = "src.umlars_translator.core.deserialization.formats.papyrus_xmi.papyrus_xmi_deserialization_strategy"
 notation_xmi = "src.umlars_translator.core.deserialization.formats.papyrus_xmi.notation_xmi_deserialization_strategy"
+staruml_mdj = "src.umlars_translator.core.deserialization.formats.staruml_mdj.staruml_mdj_deserialization_strategy"
