--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 isolated_build = true
-envlist = py312, py3116, py31013
+envlist = py3123, py3116, py31013
 
 [testenv]
 allowlist_externals = poetry
 deps = pytest
 commands =
-    poetry run pytest tests/ --import-mode importlib
+    poetry run python -m pytest tests/ --import-mode importlib
