--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
 isolated_build = true
-envlist = py3123, py3116, py31013
+envlist = py312, py3116, py31013
 
 [testenv]
 allowlist_externals = poetry
-deps = pytest
+deps = 
+    pytest
+    pytest-asyncio
 commands =
-    poetry run python -m pytest tests/ --import-mode importlib
+    poetry run python3 -m pytest tests/ --import-mode=importlib
